fix for overlapping items

--- a/weather.css
+++ b/weather.css
@@ -35,10 +35,8 @@ body{
 .text2{
 	font-size: 30px;
 	color: #41BBC1;
-	margin-bottom: -40px;
+	margin-bottom: 50px;
 	background: black;
-	position: relative;
-
 }
 .searchbar{
 	position: absolute;
